[gd_scene load_steps=36 format=2]

[ext_resource path="res://Assets/Enemy/Skeleton/Idle.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemy/Skeleton/Walk.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemy/Skeleton/Take Hit.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemy/Skeleton/Death.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemy/Skeleton/Attack.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Skeleton.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "attack",
"speed": 7.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "run",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 494.5, 50 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 10, 19.5 )

[sub_resource type="CapsuleShape2D" id=30]
radius = 28.0

[sub_resource type="CapsuleShape2D" id=28]
height = 26.0

[node name="Skeleton" type="KinematicBody2D"]
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -26 )
z_index = -6
z_as_relative = false
frames = SubResource( 5 )
animation = "run"
flip_h = true

[node name="PatrolArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="PatrolArea"]
light_mask = 0
position = Vector2( -0.5, -50 )
shape = SubResource( 27 )

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 271
collision_mask = 3855

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( -4, -20 )
shape = SubResource( 29 )

[node name="CanAttack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanAttack"]
position = Vector2( -35, -30 )
shape = SubResource( 30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, -23 )
shape = SubResource( 28 )

[node name="DamageLabel" type="Label" parent="."]
modulate = Color( 0.964706, 0.129412, 0.129412, 1 )
margin_left = -6.0
margin_top = -59.0
margin_right = 3.0
margin_bottom = -45.0
rect_scale = Vector2( 0.696695, 0.740447 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="PatrolArea" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="PatrolArea" to="." method="_on_Area_body_exited"]
[connection signal="body_entered" from="CanAttack" to="." method="_on_CanAttack_body_entered"]
[connection signal="body_exited" from="CanAttack" to="." method="_on_CanAttack_body_exited"]
